[gd_scene load_steps=18 format=2]

[ext_resource path="res://Sky/Sky.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://wall/floor.tscn" type="PackedScene" id=3]
[ext_resource path="res://wall/wall.tscn" type="PackedScene" id=4]
[ext_resource path="res://main.gd" type="Script" id=5]
[ext_resource path="res://ground/Ground.tscn" type="PackedScene" id=6]
[ext_resource path="res://font/Crystal Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://ui/ui_start.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/ui_stop.tscn" type="PackedScene" id=10]
[ext_resource path="res://audio/fire.wav" type="AudioStream" id=11]
[ext_resource path="res://audio/fire_frag.wav" type="AudioStream" id=12]
[ext_resource path="res://audio/Skulls.wav" type="AudioStream" id=13]
[ext_resource path="res://crt_shader.shader" type="Shader" id=14]
[ext_resource path="res://ui/pause.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 21
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("Ground:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 14 )
shader_param/crt_curve = 0.02
shader_param/crt_scan_line_color = 0.0
shader_param/aperture_grille_rate = 0.4
shader_param/rf_switch_esque_blur = 0.0
shader_param/white_noise_rate = 0.15

[node name="Node2D" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1000.0
margin_bottom = 660.0
color = Color( 0.407843, 0.0980392, 0.603922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wall" parent="." instance=ExtResource( 4 )]

[node name="wall2" parent="." instance=ExtResource( 4 )]
position = Vector2( 1000, 0 )

[node name="floor" parent="." instance=ExtResource( 3 )]

[node name="floor2" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 310 )

[node name="Timer_fire" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Game_timer_one_sec" type="Timer" parent="."]
one_shot = true

[node name="Timer_fire_frag" type="Timer" parent="."]
one_shot = true

[node name="Sky" parent="." instance=ExtResource( 1 )]

[node name="Ground" parent="." instance=ExtResource( 6 )]
modulate = Color( 1, 1, 1, 0 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 490, 560 )

[node name="TimerStartGround" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="padder" type="ColorRect" parent="."]
margin_top = 639.0
margin_right = 1000.0
margin_bottom = 660.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="padder"]
margin_left = 30.0
margin_right = 182.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "очки-0"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="energy" type="Label" parent="padder"]
margin_left = 602.0
margin_right = 677.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "энергия-"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="padder"]
margin_left = 690.0
margin_right = 880.0
margin_bottom = 21.0
custom_constants/separation = 10
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="padder/HBoxContainer"]
margin_right = 10.0
margin_bottom = 21.0
rect_min_size = Vector2( 10, 0 )

[node name="ColorRect2" type="ColorRect" parent="padder/HBoxContainer"]
margin_left = 20.0
margin_right = 30.0
margin_bottom = 21.0
rect_min_size = Vector2( 10, 0 )

[node name="ColorRect3" type="ColorRect" parent="padder/HBoxContainer"]
margin_left = 40.0
margin_right = 50.0
margin_bottom = 21.0
rect_min_size = Vector2( 10, 0 )

[node name="ColorRect4" type="ColorRect" parent="padder/HBoxContainer"]
margin_left = 60.0
margin_right = 70.0
margin_bottom = 21.0
rect_min_size = Vector2( 10, 0 )

[node name="ColorRect5" type="ColorRect" parent="padder/HBoxContainer"]
margin_left = 80.0
margin_right = 90.0
margin_bottom = 21.0
rect_min_size = Vector2( 10, 0 )

[node name="ColorRect6" type="ColorRect" parent="padder/HBoxContainer"]
margin_left = 100.0
margin_right = 110.0
margin_bottom = 21.0
rect_min_size = Vector2( 10, 0 )

[node name="ColorRect7" type="ColorRect" parent="padder/HBoxContainer"]
margin_left = 120.0
margin_right = 130.0
margin_bottom = 21.0
rect_min_size = Vector2( 10, 0 )

[node name="ColorRect8" type="ColorRect" parent="padder/HBoxContainer"]
margin_left = 140.0
margin_right = 150.0
margin_bottom = 21.0
rect_min_size = Vector2( 10, 0 )

[node name="ColorRect9" type="ColorRect" parent="padder/HBoxContainer"]
margin_left = 160.0
margin_right = 170.0
margin_bottom = 21.0
rect_min_size = Vector2( 10, 0 )

[node name="ColorRect10" type="ColorRect" parent="padder/HBoxContainer"]
margin_left = 180.0
margin_right = 190.0
margin_bottom = 21.0
rect_min_size = Vector2( 10, 0 )

[node name="pause" type="TextureButton" parent="."]
pause_mode = 2
margin_left = 937.0
margin_top = 22.0
margin_right = 969.0
margin_bottom = 54.0
focus_mode = 0
texture_normal = ExtResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="ui_start" parent="." instance=ExtResource( 9 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 2 )

[node name="ui_stop" parent="." instance=ExtResource( 10 )]
visible = false

[node name="AudioPP" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="AudioFireFrag" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="AudioGlobal" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 499, 288 )
stream = ExtResource( 13 )
volume_db = 5.0

[node name="Enemys" type="Node2D" parent="."]

[node name="ColorRect2" type="ColorRect" parent="."]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[connection signal="timeout" from="Timer_fire" to="." method="_on_Timer_fire_timeout"]
[connection signal="timeout" from="Game_timer_one_sec" to="." method="_on_Game_timer_one_sec_timeout"]
[connection signal="timeout" from="Timer_fire_frag" to="." method="_on_Timer_fire_frag_timeout"]
[connection signal="timeout" from="TimerStartGround" to="." method="_on_TimerStartGround_timeout"]
[connection signal="button_up" from="pause" to="." method="_on_pause_button_up"]
[connection signal="finished" from="AudioGlobal" to="." method="_on_AudioGlobal_finished"]
